<resources>
    <string name="app_name">BobPercent</string>

    <string name="login_title">%</string>
    <string name="login_hint_email">E-MAIL</string>
    <string name="login_hint_password">PW</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_btn_signup">sign up</string>


    <string name="signup_btn_signup">SIGN UP</string>
    <string name="signup_hint_name">NAME</string>
    <string name="signup_hint_email">E-MAIL</string>
    <string name="signup_hint_password">PW</string>

    <string name="pending_txt_gen_code">코드가 생성되었습니다!</string>
    <string name="pending_hint_input_code">상대방 코드 입력</string>
    <string name="pending_btn_next">NEXT</string>

    <string name="gen_txt_code">아래의 코드를 복사하여 상대방에게 전송하세요!</string>

    <string name="home_txt_match">FOOD MATCH</string>
    <string name="home_txt_history">VIEW HISTORY</string>
</resources>
