<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:gravity="center_horizontal"
    android:background="@android:color/black"
    android:orientation="vertical"
    >

    <com.mash.pig.bobpercent.app.widget.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_title"
        android:textSize="60sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:hint="@string/signup_hint_name"
        android:textColorHint="#666666"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/et_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_hint_email"
        android:textColorHint="#666666"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/et_signup_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/signup_hint_password"
        android:textColorHint="#666666"
        android:textColor="@android:color/white"
        />

    <com.mash.pig.bobpercent.app.widget.FontButton
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/signup_btn_signup"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/shape_round_pink"
        />

</LinearLayout>