<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <com.mash.pig.bobpercent.app.widget.FontTextView
            android:id="@+id/tv_pending_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pending_txt_gen_code"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            />

        <RelativeLayout
            android:id="@+id/rl_pending_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pending_text"
            android:layout_marginTop="40dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/image_circle_four"
                />

            <EditText
                android:id="@+id/et_pending_code"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:inputType="text"
                android:hint="@string/pending_hint_input_code"
                android:textSize="17sp"
                android:textColorHint="#666666"
                android:textColor="@color/colorAccent"
                />

            <ImageView
                android:id="@+id/iv_pending_et_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_point_black"
                android:layout_toLeftOf="@id/et_pending_code"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_toLeftOf="@id/iv_pending_et_left"
                android:layout_alignParentLeft="true"
                android:background="#E6E6E6"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:id="@+id/iv_pending_et_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_point_black"
                android:layout_toRightOf="@id/et_pending_code"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_toRightOf="@id/iv_pending_et_right"
                android:layout_alignParentRight="true"
                android:background="#E6E6E6"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_pending_image_container"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            >

            <com.mash.pig.bobpercent.app.widget.FontButton
                android:id="@+id/btn_pending_next"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:text="@string/pending_btn_next"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/shape_round_pink"
                />

            <ImageView
                android:id="@+id/iv_pending_btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_point_black"
                android:layout_toLeftOf="@id/btn_pending_next"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_toLeftOf="@id/iv_pending_btn_left"
                android:layout_alignParentLeft="true"
                android:background="#E6E6E6"
                android:layout_centerVertical="true"
                />


            <ImageView
                android:id="@+id/iv_pending_btn_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_point_black"
                android:layout_toRightOf="@id/btn_pending_next"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_toRightOf="@id/iv_pending_btn_right"
                android:layout_alignParentRight="true"
                android:background="#E6E6E6"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>